--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.html --no-source-maps --experimental-scope-hoisting",
     "lint:css": "stylelint './src/**/*.js'"
   },
   "author": "Martin Tudor",
